# Score_pullpiri_integrations

./: README.md
pullpiri_persistency/: PERSISTENCY_INTEGRATION.md
pullpiri_persistency/examples/resources/: helloworld.yaml
pullpiri_persistency/feo_demo/feo/: cleanup.sh
pullpiri_persistency/feo_demo/feo/perfetto-model/: BUILD.bazel
pullpiri_persistency/scripts/: test_persistency_integration.sh
pullpiri_persistency/src/common/: Cargo.toml  build.rs
pullpiri_persistency/src/common/proto/: persistency.proto
pullpiri_persistency/src/common/src/: lib.rs  persistency.rs  persistency_client.rs
pullpiri_persistency/src/player/actioncontroller/src/: manager.rs
pullpiri_persistency/src/player/filtergateway/src/: manager.rs
pullpiri_persistency/src/player/filtergateway/tests/: filter_gateway_manager_integration.rs  filter_integration.rs  integration_main.rs  sender_integration.rs
pullpiri_persistency/src/player/statemanager/src/: manager.rs  state_machine.rs
pullpiri_persistency/src/server/: Cargo.toml
pullpiri_persistency/src/server/apiserver/src/: main.rs  manager.rs
pullpiri_persistency/src/server/persistency-service/: Cargo.toml
pullpiri_persistency/vstechdemo/demo25/Dashboards/: refresh-utils.js
pullpiri_persistency/vstechdemo/demo25/dds_console_app/: README_REST_API.md
pullpiri_persistency/vstechdemo/demo25/scripts/: start_autonomous.sh  start_emergency.sh  start_emergencypopup.sh  start_infotainment.sh  start_manual.sh  stop_autonomous.sh  stop_emergency.sh  stop_emergencypopup.sh  stop_infotainment.sh  stop_manual.sh
(+103 files in other folders)
